--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    width: 100%;
+    height: 100%;
+    background-image:linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.4)), url("./back1.jpg");
+    background-position:center;
+    background-size: cover;
+    position: absolute;
+}
+.digitalC{
+    background: rgb(237, 227, 227);
+    width: 300px;
+    height: 250px;
+    margin: 15% auto;
+    position: relative;
+    padding:  30px ;
+    border: 0;
+    box-shadow: 0 0 20px 30px #abf1f0;
+    border-radius: 6px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+    text-align: center;
+    background:linear-gradient(to right, #9AFBFA, #8c1abd);
+    border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+    background: linear-gradient(to right, #9AFBFA,#8c1abd);
+    text-align: center;
+    border: 0px;
+    display: block;
+    padding: 20px;
+    margin:50px auto ;
+    cursor: pointer;
+    font-weight: bold;
+    position: relative;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-radius: 12px;
 }
